--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: sathish@rvsgroup.com
 description: >- # this means to ignore newlines until "baseurl:"
   Welcome to my blog Friends ! You can read all my blogs here with respect to Technology, Education, and of course My Projects & Learnings.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://sathishnotes.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: sathish_twit
 github_username:  sathishnotes
 
